add back link, update structure for case, add responsive styles, add styles for slider

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -40,6 +40,9 @@ component--image-slider:
   dependencies:
     - themekit/common--glide
     - themekit/themekit
+  css:
+    theme:
+      dist/css/image-slider.css: {}
 component--link-default:
   dependencies:
     - themekit/themekit
