--- a/config/default/core.entity_form_display.block_content.text.default.yml
+++ b/config/default/core.entity_form_display.block_content.text.default.yml
@@ -9,8 +9,28 @@ dependencies:
     - field.field.block_content.text.field_heading
     - field.field.block_content.text.field_p_link
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_text_content:
+      children:
+        - field_heading
+        - field_description
+        - field_p_link
+      label: 'Text content'
+      region: content
+      parent_name: ''
+      weight: 1
+      format_type: details
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        open: true
+        description: ''
+        required_fields: true
 id: block_content.text.default
 targetEntityType: block_content
 bundle: text
@@ -18,7 +38,7 @@ mode: default
 content:
   field_description:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 3
     region: content
     settings:
       rows: 9
@@ -34,7 +54,7 @@ content:
     third_party_settings: {  }
   field_heading:
     type: string_textfield
-    weight: 1
+    weight: 2
     region: content
     settings:
       size: 60
@@ -42,7 +62,7 @@ content:
     third_party_settings: {  }
   field_p_link:
     type: paragraphs
-    weight: 3
+    weight: 4
     region: content
     settings:
       title: Link
