Install and configure node_revision_delete module

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
     "drupal/ckeditorheight": "^1.0",
     "drupal/components": "^2.2",
     "drupal/config_update": "^1.0",
-    "drupal/core-recommended": "^9.3",
     "drupal/core-composer-scaffold": "^9.3",
+    "drupal/core-recommended": "^9.3",
     "drupal/csv_serialization": "^2.0@beta",
     "drupal/devel": "^4.0",
     "drupal/embed": "^1.0",
@@ -74,6 +74,7 @@
     "drupal/menu_block": "^1.0",
     "drupal/metatag": "^1.0",
     "drupal/name": "^1.0",
+    "drupal/node_revision_delete": "^1.0@RC",
     "drupal/paragon_adminkit": "^1.0@alpha",
     "drupal/paragon_themekit": "^1.0@alpha",
     "drupal/paragraphs": "^1.0",
