--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -100,6 +100,7 @@ module:
   metatag_twitter_cards: 0
   name: 0
   node: 0
+  node_revision_delete: 0
   options: 0
   page_cache: 0
   paragraphs_browser: 0
