--- a/config/default/node.type.page.yml
+++ b/config/default/node.type.page.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - node_revision_delete
     - scheduler
 third_party_settings:
   menu_ui:
@@ -23,6 +24,10 @@ third_party_settings:
     unpublish_enable: false
     unpublish_required: false
     unpublish_revision: false
+  node_revision_delete:
+    minimum_revisions_to_keep: 5
+    minimum_age_to_delete: 0
+    when_to_delete: 0
 _core:
   default_config_hash: CGiJnsvKfTbh4QMH0Q2d-YQZ0Eksrlhl4y0Uc3-xncA
 name: 'Basic page'
@@ -30,5 +35,5 @@ type: page
 description: 'Use <em>Basic page</em> for the static content, like as ''Privacy Statement'' page.'
 help: ''
 new_revision: true
-preview_mode: 1
+preview_mode: 0
 display_submitted: false
