Adjust form display settings for LB components

--- a/config/default/core.entity_form_display.block_content.basic_banner.default.yml
+++ b/config/default/core.entity_form_display.block_content.basic_banner.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.block_content.basic_banner.field_media
     - field.field.block_content.basic_banner.field_p_link
   module:
+    - allowed_formats
     - field_group
     - media_library
     - paragraphs
@@ -23,7 +24,7 @@ third_party_settings:
       label: 'Text content'
       region: content
       parent_name: ''
-      weight: 1
+      weight: 0
       format_type: details
       format_settings:
         classes: ''
@@ -42,11 +43,14 @@ content:
     weight: 3
     region: content
     settings:
-      rows: 9
+      rows: 3
       summary_rows: 3
       placeholder: ''
       show_summary: false
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_heading:
     type: string_textfield
     weight: 2
@@ -57,7 +61,7 @@ content:
     third_party_settings: {  }
   field_media:
     type: media_library_widget
-    weight: 0
+    weight: 1
     region: content
     settings:
       media_types: {  }
@@ -75,7 +79,7 @@ content:
       closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
-      default_paragraph_type: link_default
+      default_paragraph_type: _none
       features:
         add_above: '0'
         collapse_edit_all: collapse_edit_all
