--- a/config/default/core.entity_form_display.block_content.home_banner.default.yml
+++ b/config/default/core.entity_form_display.block_content.home_banner.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.block_content.home_banner.field_media
     - field.field.block_content.home_banner.field_p_link
   module:
+    - allowed_formats
     - field_group
     - media_library
     - paragraphs
@@ -24,7 +25,7 @@ third_party_settings:
       label: 'Text content'
       region: content
       parent_name: ''
-      weight: 2
+      weight: 0
       format_type: details
       format_settings:
         classes: ''
@@ -43,11 +44,14 @@ content:
     weight: 1
     region: content
     settings:
-      rows: 9
+      rows: 3
       summary_rows: 3
       placeholder: ''
       show_summary: false
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_heading:
     type: string_textfield
     weight: 0
@@ -58,7 +62,7 @@ content:
     third_party_settings: {  }
   field_logo_type:
     type: options_select
-    weight: 0
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -82,7 +86,7 @@ content:
       closed_mode_threshold: 0
       add_mode: select
       form_display_mode: default
-      default_paragraph_type: link_default
+      default_paragraph_type: _none
       features:
         add_above: '0'
         collapse_edit_all: collapse_edit_all
