--- a/config/default/core.entity_form_display.block_content.text.default.yml
+++ b/config/default/core.entity_form_display.block_content.text.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.block_content.text.field_heading
     - field.field.block_content.text.field_p_link
   module:
+    - allowed_formats
     - field_group
     - paragraphs
     - text
@@ -22,7 +23,7 @@ third_party_settings:
       label: 'Text content'
       region: content
       parent_name: ''
-      weight: 1
+      weight: 0
       format_type: details
       format_settings:
         classes: ''
@@ -41,16 +42,20 @@ content:
     weight: 3
     region: content
     settings:
-      rows: 9
+      rows: 3
       summary_rows: 3
       placeholder: ''
       show_summary: false
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_enable_background:
-    type: options_buttons
-    weight: 0
+    type: boolean_checkbox
+    weight: 1
     region: content
-    settings: {  }
+    settings:
+      display_label: true
     third_party_settings: {  }
   field_heading:
     type: string_textfield
@@ -73,7 +78,7 @@ content:
       closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
-      default_paragraph_type: link_default
+      default_paragraph_type: _none
       features:
         add_above: '0'
         collapse_edit_all: collapse_edit_all
