add styles for partner, add template, update config

--- a/config/default/core.entity_view_display.node.partner.default.yml
+++ b/config/default/core.entity_view_display.node.partner.default.yml
@@ -66,7 +66,7 @@ content:
     weight: 7
     region: content
   field_email:
-    type: basic_string
+    type: email_mailto
     label: hidden
     settings: {  }
     third_party_settings: {  }
