--- a/config/default/field.field.node.partner.body.yml
+++ b/config/default/field.field.node.partner.body.yml
@@ -11,7 +11,7 @@ dependencies:
 third_party_settings:
   allowed_formats:
     allowed_formats:
-      - basic_html
+      - full_html
 id: node.partner.body
 field_name: body
 entity_type: node
