add styles and template for category feature, add styles for category taxonomy page, add styles and template for simple teaser case, update config

--- a/config/default/core.entity_view_display.node.case.simple_teaser.yml
+++ b/config/default/core.entity_view_display.node.case.simple_teaser.yml
@@ -15,10 +15,8 @@ dependencies:
     - field.field.node.case.field_metatags
     - field.field.node.case.field_reference
     - node.type.case
-    - responsive_image.styles.fourth_column_hq
   module:
     - layout_builder
-    - media_responsive_thumbnail
     - user
 third_party_settings:
   layout_builder:
@@ -30,11 +28,11 @@ bundle: case
 mode: simple_teaser
 content:
   field_logo:
-    type: media_responsive_thumbnail
+    type: entity_reference_entity_view
     label: hidden
     settings:
-      responsive_image_style: fourth_column_hq
-      image_link: ''
+      view_mode: logo
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
