--- a/config/default/views.view.taxonomy_term.yml
+++ b/config/default/views.view.taxonomy_term.yml
@@ -303,6 +303,7 @@ display:
     display_plugin: page
     position: 1
     display_options:
+      enabled: false
       query:
         type: views_query
         options: {  }
