--- a/config/default/core.entity_view_display.taxonomy_term.category.default.yml
+++ b/config/default/core.entity_view_display.taxonomy_term.category.default.yml
@@ -57,8 +57,8 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: default
-      link: true
+      view_mode: simple_teaser
+      link: false
     third_party_settings: {  }
     weight: 4
     region: content
