COD-21 - Add feature paragraph and Community Features component

--- a/config/default/core.entity_view_display.node.component_page.full.yml
+++ b/config/default/core.entity_view_display.node.component_page.full.yml
@@ -76,12 +76,14 @@ third_party_settings:
         dnl_layout_twocol_section:
           all_regions:
             'Inline blocks':
+              - 'inline_block:community_features'
               - 'inline_block:text'
       blacklisted_blocks:
         dnl_layout_onecol_section:
           all_regions:
             'Inline blocks':
               - 'inline_block:basic_banner'
+              - 'inline_block:community_features'
               - 'inline_block:home_banner'
               - 'inline_block:simple_banner'
         dnl_layout_twocol_section:
