COD-17 - Add Listing and Cases order blocks for cases view; Init DraggableViews

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -18,6 +18,12 @@ component:
   css:
     theme:
       dist/css/block.css: {}
+component--cases:
+  dependencies:
+    - themekit/themekit
+  css:
+    theme:
+      dist/css/block--cases.css: {}
 component--categories:
   dependencies:
     - themekit/themekit
