--- a/config/default/core.entity_view_display.node.case.teaser.yml
+++ b/config/default/core.entity_view_display.node.case.teaser.yml
@@ -18,12 +18,21 @@ dependencies:
     - responsive_image.styles.third_column_hq
   module:
     - media_responsive_thumbnail
+    - text
     - user
 id: node.case.teaser
 targetEntityType: node
 bundle: case
 mode: teaser
 content:
+  body:
+    type: text_summary_or_trimmed
+    label: hidden
+    settings:
+      trim_length: 75
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_category:
     type: entity_reference_label
     label: hidden
@@ -42,7 +51,6 @@ content:
     weight: 0
     region: content
 hidden:
-  body: true
   content_moderation_control: true
   field_component_item: true
   field_components: true
