--- a/config/default/core.entity_view_display.node.case.teaser.yml
+++ b/config/default/core.entity_view_display.node.case.teaser.yml
@@ -18,7 +18,7 @@ dependencies:
     - responsive_image.styles.third_column_hq
   module:
     - media_responsive_thumbnail
-    - text
+    - smart_trim
     - user
 id: node.case.teaser
 targetEntityType: node
@@ -26,10 +26,21 @@ bundle: case
 mode: teaser
 content:
   body:
-    type: text_summary_or_trimmed
+    type: smart_trim
     label: hidden
     settings:
       trim_length: 75
+      trim_type: chars
+      trim_suffix: ...
+      wrap_output: false
+      wrap_class: trimmed
+      more_link: false
+      more_class: more-link
+      more_text: More
+      summary_handler: ignore
+      trim_options:
+        text: true
+        trim_zero: false
     third_party_settings: {  }
     weight: 2
     region: content
