Add module quick_node_clone

--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,7 @@
     "drupal/path_redirect_import": "^1.0@beta",
     "drupal/pathauto": "^1.0",
     "drupal/purge": "^3.0@beta",
+    "drupal/quick_node_clone": "^1.15",
     "drupal/quicklink": "^2.0",
     "drupal/redirect": "^1.0",
     "drupal/redis": "^1.5",
