Update confog for view cases (add mini pagination)

--- a/config/default/views.view.cases.yml
+++ b/config/default/views.view.cases.yml
@@ -261,10 +261,23 @@ display:
     position: 1
     display_options:
       pager:
-        type: some
+        type: mini
         options:
           offset: 0
           items_per_page: 6
+          total_pages: null
+          id: 0
+          tags:
+            next: '>'
+            previous: '<'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
       filters:
         status:
           id: status
@@ -336,11 +349,13 @@ display:
         options:
           view_mode: teaser
       defaults:
+        use_ajax: false
         pager: false
         style: false
         row: false
         filters: false
         filter_groups: false
+      use_ajax: true
       display_description: ''
       display_extenders: {  }
     cache_metadata:
@@ -348,6 +363,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
