--- a/config/default/core.entity_view_display.node.event.teaser.yml
+++ b/config/default/core.entity_view_display.node.event.teaser.yml
@@ -12,13 +12,18 @@ dependencies:
     - node.type.event
   module:
     - datetime_range
-    - text
+    - smart_trim
     - user
 id: node.event.teaser
 targetEntityType: node
 bundle: event
 mode: teaser
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_date_range:
     type: daterange_default
     label: hidden
@@ -30,9 +35,21 @@ content:
     weight: 0
     region: content
   field_intro:
-    type: text_default
+    type: smart_trim
     label: hidden
-    settings: {  }
+    settings:
+      trim_length: 100
+      trim_type: chars
+      trim_suffix: ''
+      wrap_output: false
+      wrap_class: trimmed
+      more_link: false
+      more_class: more-link
+      more_text: More
+      summary_handler: full
+      trim_options:
+        text: true
+        trim_zero: false
     third_party_settings: {  }
     weight: 1
     region: content
