add multiple slider for category, add template for cases slider, update category tempalte, create view for cases slider, update glide

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -234,6 +234,7 @@ user:
       dist/css/user.css: {}
 views--cases:
   dependencies:
+    - themekit/common--glide
     - themekit/themekit
   css:
     theme:
