--- a/config/default/core.entity_view_display.node.event.featured_teaser.yml
+++ b/config/default/core.entity_view_display.node.event.featured_teaser.yml
@@ -1,9 +1,9 @@
-uuid: c994e6b3-2fe8-4f5f-a6cb-623db3653ce6
+uuid: 088ebaf4-89cc-441e-86fa-2aaa872a7ba3
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.featured_teaser
     - field.field.node.event.body
     - field.field.node.event.field_address
     - field.field.node.event.field_date_range
@@ -12,39 +12,32 @@ dependencies:
     - node.type.event
   module:
     - datetime_range
-    - smart_trim
+    - layout_builder
+    - text
     - user
-id: node.event.teaser
+third_party_settings:
+  layout_builder:
+    enabled: false
+    allow_custom: false
+id: node.event.featured_teaser
 targetEntityType: node
 bundle: event
-mode: teaser
+mode: featured_teaser
 content:
   field_date_range:
     type: daterange_default
     label: hidden
     settings:
       timezone_override: ''
-      format_type: medium
+      format_type: short
       separator: '-'
     third_party_settings: {  }
     weight: 0
     region: content
   field_intro:
-    type: smart_trim
+    type: text_default
     label: hidden
-    settings:
-      trim_length: 100
-      trim_type: chars
-      trim_suffix: ''
-      wrap_output: false
-      wrap_class: trimmed
-      more_link: false
-      more_class: more-link
-      more_text: More
-      summary_handler: full
-      trim_options:
-        text: true
-        trim_zero: false
+    settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
