--- a/composer.json
+++ b/composer.json
@@ -224,7 +224,8 @@
         "Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
       },
       "drupal/draggableviews": {
-        "Error adding or editing the field Draggableviews: Content": "https://www.drupal.org/files/issues/2022-01-13/error-adding-or-editing-the-field-draggableviews-content-1.patch"
+        "Error adding or editing the field Draggableviews: Content": "https://www.drupal.org/files/issues/2022-01-13/error-adding-or-editing-the-field-draggableviews-content-1.patch",
+        "Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
       }
     }
   },
