--- a/config/default/views.view.cases.yml
+++ b/config/default/views.view.cases.yml
@@ -278,6 +278,41 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+      arguments:
+        field_reference_target_id:
+          id: field_reference_target_id
+          table: node__field_reference
+          field: field_reference_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: numeric
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
       filters:
         status:
           id: status
@@ -353,6 +388,7 @@ display:
         pager: false
         style: false
         row: false
+        arguments: false
         filters: false
         filter_groups: false
       use_ajax: true
@@ -363,6 +399,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
