--- a/config/default/core.entity_view_display.block_content.links.default.yml
+++ b/config/default/core.entity_view_display.block_content.links.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - block_content.type.links
     - field.field.block_content.links.field_heading
-    - field.field.block_content.links.field_link
+    - field.field.block_content.links.field_links
   module:
     - link
 id: block_content.links.default
@@ -21,7 +21,7 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_link:
+  field_links:
     type: link
     label: hidden
     settings:
@@ -31,7 +31,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 1
+    weight: 2
     region: content
 hidden:
   langcode: true
