COD-13 - Add News Slider block; Move same slider block styles into the mixin;

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -112,6 +112,13 @@ component--navigation--social:
   css:
     theme:
       dist/css/menu--social.css: {}
+component--news-slider:
+  dependencies:
+    - themekit/common--glide
+    - themekit/themekit
+  css:
+    theme:
+      dist/css/block--news-slider.css: {}
 component--partners:
   dependencies:
     - themekit/themekit
