--- a/config/default/views.view.news.yml
+++ b/config/default/views.view.news.yml
@@ -95,15 +95,15 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        publish_on:
-          id: publish_on
+        created:
+          id: created
           table: node_field_data
-          field: publish_on
+          field: created
           relationship: none
           group_type: group
           admin_label: ''
           entity_type: node
-          entity_field: publish_on
+          entity_field: created
           plugin_id: date
           order: DESC
           expose:
