COD-22 - Disable all views blocks for a two-column layout

--- a/config/default/core.entity_view_display.node.component_page.full.yml
+++ b/config/default/core.entity_view_display.node.component_page.full.yml
@@ -78,6 +78,7 @@ third_party_settings:
             'Inline blocks':
               - 'inline_block:community_features'
               - 'inline_block:text'
+            'Lists (Views)': {  }
       blacklisted_blocks:
         dnl_layout_onecol_section:
           all_regions:
